# sui

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  compile_commands.json  flake.nix
include/: connector.h  types.h
src/: main.cpp  mylib.cpp  types.cpp
sui_sintax/: Button.sui  main.sui
test/: replacement.asm
